@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.13 2012/02/20 12:29:17 sno Exp $
-
-SHA1 (Attribute-Handlers-0.93.tar.gz) = 7b677cc4156be55e58cd535c4924d3fdfbc9f6ed
-RMD160 (Attribute-Handlers-0.93.tar.gz) = eed2473058d37f5a49e87d4ed2c655592c0e2091
-Size (Attribute-Handlers-0.93.tar.gz) = 24011 bytes
